recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value levels
  if(levels >= 0) {
     ^Sierpinski:4: error: not found: value steps
      sierpinski(steps-1, length/2)
                 ^Sierpinski:6: error: not found: value steps
    	sierpinski(steps-1, length/2)
                   ^