recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  
  if(levels >= 0) {
    for (k<- 1 to 3) {
      sierpinski(steps-1, length/2)
    	avance(length/2)
    	sierpinski(steps-1, length/2)
      avance(length/2)
    	gauche(120)
    }
	}
}